added create and analysis APIs: basics

--- a/posts/templates/posts/analysis.html
+++ b/posts/templates/posts/analysis.html
@@ -1,1 +1,8 @@
-this is analysis
+<html>
+    <body>
+        You are looking at the following post: <br>
+        {{ content }} <br><br>
+        Average Word Length: {{ avg_word_length }}<br>
+        Word Count: {{ word_count }}
+    </body>
+</html>
