refactor: error handling and production ready

--- a/posts/templates/posts/analysis.html
+++ b/posts/templates/posts/analysis.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         You are looking at the following post: <br>
-        {{ content }} <br><br>
+        {{ content | safe }} <br><br>
         Average Word Length: {{ avg_word_length }}<br>
         Word Count: {{ word_count }}
     </body>
